# CROSSI

./: #CMakeLists copy.txt  #CMakeLists.txt  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
DBC/: CAN3_UASA2209_Vehicle_mitnode (3).dbc  CAN4_Accu_1.dbc  CAN7_UASA2209_Accu_2.dbc
config/: config.txt  crossi_config.txt  dbc_change.txt
docu/: CROSSI.md  CROSSI_SHIELD.md  ROS_MSG_GEN_UML_ACT.md  ROS_Msg_Gen.md  test_interface.md
random_stuff/: vcan_setup.sh
src/: CMakeLists.txt  Fixed.cpp  Fixed.h  capture.cpp  capture.h  config.cpp  config.h  crossiPublisher.cpp  crossiPublisher.h  dcu.cpp  dcu.h  decode.cpp  decode.h  fileHasher.cpp  fileHasher.h  handler.cpp  headerBuilder.cpp  headerBuilder.h  list.cpp  list.h  loadROSMsg.cpp  loadROSMsg.h  msgBuilder.cpp  msgBuilder.h  msggen.cpp  msggen.h  publisherBuilder.cpp  publisherBuilder.h  ring.h  ros_msg_header.h
